editTicketState
