# src/routes/employeeRoutes.ts
@@ -9,12 +9,14 @@ import { RemoveMealController } from "../controllers/employee/meal/removeMealCon
 import { SeeUndeliveredTicketsController } from "../controllers/employee/ticket/seeUndeliveredTicketsController";
 import { isEmployee } from "../middlewares/isEmployee";
 import { CanBeMadeController } from "../controllers/employee/meal/canBeMadeController";
+import { EditTicketStateController } from "../controllers/employee/ticket/editTicketStateController";
 
 const createMealController = new CreateMealController();
 const editMealController = new EditMealController();
 const removeMealController = new RemoveMealController();
 const seeUndeliveredTicketsController = new SeeUndeliveredTicketsController();
 const canBeMadeController = new CanBeMadeController();
+const editTicketStateController = new EditTicketStateController();
 
 
 employeeRouter.post("/meal/:barId", validateToken, validateRefreshToken, isEmployee, createMealController.handle);
@@ -22,6 +24,7 @@ employeeRouter.put("/meal/:mealId", validateToken, validateRefreshToken, isEmplo
 employeeRouter.delete("/meal/:mealId", validateToken, validateRefreshToken, isEmployee, removeMealController.handle);
 employeeRouter.get("/tickets", validateToken, validateRefreshToken, isEmployee, seeUndeliveredTicketsController.handle);
 employeeRouter.put("/meal/:mealId/canBeMade", validateToken, validateRefreshToken, isEmployee, canBeMadeController.handle);
+employeeRouter.put("/tickets/:ticketId", validateToken, validateRefreshToken, isEmployee, editTicketStateController.handle);
 
 
 export { employeeRouter }
