# src/validations/employee/ticket/editTicketStateValidation.ts
@@ -1,0 +1,43 @@
+import { createClient } from "../../../config/db";
+
+/**
+ * An employee has access to a list of orders placed by different students that have not yet been delivered. 
+ * These tickets have an associated status that can be edited by the employee. For this to be done the bar must be the same as the order bar
+ * 
+ * @param uId id of the authenticated employee who wants to edit the state of a ticket
+ */
+export async function getTicketBar(ticketId: string) {
+    const checkTicketBarDBClient = createClient();
+    const query = await checkTicketBarDBClient.query(`SELECT barid FROM tickets
+                                                        WHERE ticketid = $1`, [ticketId]);
+
+    console.log(query['rows'][0]["barid"])                                           
+    return query['rows'][0]["barid"]
+}
+
+
+/**
+ * To change the state of a ticket you need to get the state id
+ * 
+ * @param stateName name of the state that will be associated to the ticket
+ */
+export async function getStateId(stateName: string) {
+    const getStateIdDBClient = createClient();
+    const query = await getStateIdDBClient.query(`SELECT stateid FROM states
+                                                WHERE name = $1`, [stateName]);
+                  
+    return query['rows'][0]["stateid"]
+}
+
+/**
+ * To change the state of a ticket you need to check if the state exists
+ * 
+ * @param stateName name of the state that will be associated to the ticket
+ */
+export async function checkStateNameExists(stateName: string) {
+    const checkStateNameDBClient = createClient();
+    const query = await checkStateNameDBClient.query(`SELECT stateid FROM states
+                                                WHERE name = $1`, [stateName]);
+                  
+    return query['rows'].length != 0
+}
